--- a/css/style.css
+++ b/css/style.css
@@ -125,4 +125,13 @@ footer p{
     
   }
 
+  header{
+    display:flex;
+    justify-content:space-between
+  }
+
+  nav li{
+    font-size:20px;
+  }
+
 }
